@startuml


class Runner{
data_picker: DataPicker
flux_calculator: FluxCalculator
kalman: Kalman


get_dir_content(): dictionary
get_flux_components(): (float [][], float [][])
get_curves(): void
generate_plots(): void
}

class DataPicker{
config_path : string
dir_content : dictionary

set_data(): void
collect_data(): void
walking_through_files(string, string): string []
select_science_images(): void
get_files(string) : string []
}

class FluxCalculator{
dir_content : dictionary
mjd_serie: float []

naylor_photometry()
calc_fluxes()
}
class Kalman{
flux : float [][]
flux_vel : float [][]
correction: Correction
variable_accel_Q(float, float): void
predict_at_new_time(float): void
correct(): void
update(): void
}
class BasicKalman{

}
class MCKalman{
cholesky()
inv_gauss(float, float)
image_stats(float [][], float)
}
class NL_MCKalman


Kalman <|-- BasicKalman
Kalman <|-- MCKalman
Kalman <|-- NL_MCKalman


Runner --> DataPicker
Runner --> Kalman
Runner --> FluxCalculator


BasicKalman --> BasicCorrection
MCKalman --> MCCorrection
NL_MCKalman --> NL_MCCorrection

Interface Correction{
correct_with_measurements()
}
Correction <-- Kalman

class BasicCorrection{
correct_with_measurements()

}
class MCCorrection{
correct_with_measurements()

}
class NL_MCCorrection{
correct_with_measurements()
}


@enduml